# safraboleto

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docker/: docker-compose.yml
docker/postgres/: init.sql
docs/: business_rules_specs.md  cnpomapa30092019.xlsx  langgraph-llms.txt  memory_report_usage.md  requisitos.md
integrations/: README.md  __init__.py
integrations/credit_service/: __init__.py  main.py  models.py  rules_engine.py
integrations/credit_service/config/: credit_rules.json
integrations/credit_service/routers/: __init__.py  credit_rules.py
integrations/erp_service/: __init__.py  main.py  models.py
integrations/erp_service/mock_data/: .gitkeep
integrations/erp_service/routers/: __init__.py  agreements.py  customers.py  invoices.py
integrations/logging_service/: __init__.py  main.py  models.py
integrations/logging_service/routers/: __init__.py  interactions.py
integrations/notification_service/: __init__.py  main.py  models.py
integrations/notification_service/routers/: __init__.py  notifications.py
integrations/notification_service/templates/: messages.json
integrations/payment_service/: __init__.py  main.py  models.py
integrations/payment_service/routers/: __init__.py  payments.py
integrations/session_service/: __init__.py  main.py  redis_client.py
integrations/shared/: __init__.py  database.py
