[project]
name = "safraboleto"
version = "0.1.0"
description = "Sistema de Renegociação e Cobrança Digital B2B para Agronegócio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "asyncpg>=0.29.0",  # Driver PostgreSQL assíncrono
    "sqlalchemy[asyncio]>=2.0.0",  # ORM para PostgreSQL
    "redis>=5.0.1",  # Para session service
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.uv.dependency-groups]
dev = []
